# VulkanRenderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compileShaders.bat  conanfile.py  init.bat
cmake/: functions.cmake
cmake/config/: config.cmake  config.cmake.dist
cmake/config/project/: config.cmake.dist
cmake/config/tests/integration/: config.cmake.dist
cmake/config/tests/unit/: config.cmake.dist
conan/: conanfile.py
config/: config.json  config.yaml
include/VulkanRenderer/: Application.h  Paths.h  Paths.h.in
include/VulkanRenderer/Vendors/: tiny_obj_loader.h
include/VulkanRenderer/Vulkan/: Device.h  Initializer.h  Instance.h  Shader.h  Vulkan.h
res/Shaders/: frag.spv  shader.frag  shader.vert  vert.spv
scripts/: run.py  run_tests.py
scripts/src/: functions.py
scripts/src/beastengine/: beast_command_helper.py  beastengine.py
scripts/src/beastengine/commands/: build.py  configure.py  init.py
scripts/src/beastengine/commands/class_commands/: class_add.py  class_command.py  class_files_helper.py  class_path_show.py  class_remove.py  target_cmake_vars_file_opener.py
scripts/src/commandrunners/: command_runner.py  conan.py
scripts/src/commandrunners/cmake/: cmake.py  cmake_config_files_creator.py
scripts/src/config/: config.py  config_names.py  target_config_manager.py
scripts/src/files/: file_opener.py
scripts/src/json_utils/: json_manager.py
scripts/tests/integration/beastengine/commands/: test_init.py
scripts/tests/integration/beastengine/commands/class_commands/: test_class_file_helper_in.py
scripts/tests/integration/files/: files_opener.py
scripts/tests/tests_utilities/: micro_mock.py
scripts/tests/unit/: test_functions.py
scripts/tests/unit/beastengine/commands/: test_build.py  test_configure.py
scripts/tests/unit/beastengine/commands/class_commands/: test_class_add.py  test_class_remove.py  test_target_cmake_vars_file_opener.py
scripts/tests/unit/commandrunners/: test_command_runner.py  test_conan.py
scripts/tests/unit/commandrunners/cmake/: test_cmake.py
scripts/tests/unit/config/: test_config.py  test_config_names.py  test_target_config_manager.py
scripts/tests/unit/files/file_opener/: test_file.py
scripts/tests/unit/json_utils/: test_json_manager.py
src/: CMakeLists.txt
src/Project/: main.cpp
src/VulkanRenderer/: Application.cpp  main.cpp
src/VulkanRenderer/Vulkan/: Device.cpp  Initializer.cpp  Instance.cpp  Shader.cpp  Vulkan.cpp
tests/: CMakeLists.txt
tests/Integration/: CMakeLists.txt
tests/Unit/: CMakeLists.txt
