include("${PROJECT_CONFIG_PATH}/tests/integration/config.cmake")
include("${PROJECT_CONFIG_PATH}/project/config.cmake")

add_executable(${PROJECT_INTEGRATION_TESTS_TARGET_NAME} "${TESTS_INTEGRATION_SRC_LIST}" "${TESTS_INTEGRATION_HEADERS_LIST}")
target_include_directories(${PROJECT_INTEGRATION_TESTS_TARGET_NAME} PRIVATE "${TESTS_INTEGRATION_INCLUDE_DIR}")
target_include_directories(${PROJECT_INTEGRATION_TESTS_TARGET_NAME} PRIVATE "${PROJECT_INCLUDE_DIR}")

target_link_libraries(${PROJECT_INTEGRATION_TESTS_TARGET_NAME} PRIVATE CONAN_PKG::gtest CONAN_PKG::spdlog)

# Group files into proper folders - for IDE
GROUP_FILES("${TESTS_INTEGRATION_HEADERS_LIST}" "${TESTS_INTEGRATION_INCLUDE_DIR}")
GROUP_FILES("${TESTS_INTEGRATION_SRC_LIST}" "${TESTS_INTEGRATION_SRC_DIR}")

target_precompile_headers(
	${PROJECT_INTEGRATION_TESTS_TARGET_NAME}
	PRIVATE
		<string>
		<vector>
		<memory>
		<cstdint>
		<array>
)
